--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+bot_tkn.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
